@@ -22,8 +22,10 @@ gcl (2.6.1-26) unstable; urgency=low
   * bfd make and configure file changes to handle mach-o backend
   * *gcl-version* -> *gcl-minor-version*,*gcl-extra-version*
   * Support for more informative banner reading features list
+  * Support for both sigbus and sigsegv in sgbc.c as is customary in .h
+    files
 
- -- Camm Maguire <camm@enhanced.com>  Wed, 25 Feb 2004 22:57:25 +0000
+ -- Camm Maguire <camm@enhanced.com>  Wed, 25 Feb 2004 22:59:43 +0000
 
 gcl (2.6.1-25) unstable; urgency=low
 
